gcc/testsuite/gfortran.dg/pr95882_3.f90
! { dg-do compile }

subroutine s(c)
   character(((0)/0)) :: c  ! { dg-error "Division by zero" }
end

